--- a/public/index.html
+++ b/public/index.html
@@ -141,14 +141,14 @@
             <div class="section-title">How to Play / 游戏说明</div>
             <ol class="muted" style="margin-top:6px;">
               <li><strong>How to start:</strong> At least 1–10 players join, then click <em>Start Round</em>.  </li>
-              <li><strong>Turn order:</strong> Players act in order. Please wait until the current player finishes (Hit or Stand) before the next player acts. </li>
+              <li><strong>Player:</strong> Players can update their bankroll and bet before each round. During the player phase, Hit or Stand freely。</li>
               <li><strong>Dealer:</strong> Dealer reveals and plays after all players finish; stands on all 17.</li>
               <li><strong>Payouts:</strong> Blackjack pays 3:2; push on ties. Default bet is <strong>10</strong>. </li>
             </ol>
             <ol class="muted" style="margin-top:6px;">
               <li><strong>如何开始：</strong> 至少 1–10 名玩家加入后，点击 <em>开始发牌</em>。 </li>
-              <li><strong>轮流操作：</strong> 玩家按顺序操作。请等待上一位玩家完成（要牌或停牌）后再进行。</li>
-              <li><strong>庄家：</strong> 所有玩家结束后，庄家亮牌并操作；所有 17 都停牌。</li>
+              <li><strong>每轮操作：</strong> 玩家可在每局开始前自由修改资金和下注。在玩家阶段可自由要牌或停牌</li>
+              <li><strong>庄家：</strong> 所有玩家结束后，庄家亮牌并操作；庄家在 17 点及以上停牌。</li>
               <li><strong>结算：</strong> 天生黑杰克按 3:2 赔付；平局为推注。默认下注 <strong>10</strong>。</li>
             </ol>
           </div>
